AC_INIT([clockscrew], m4_esyscmd(svnversion|tr -d '\n'))
AM_INIT_AUTOMAKE
AM_DISABLE_STATIC

AC_CONFIG_HEADER([config.h])
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AC_PROG_LIBTOOL

AC_LTDL_SHLIBEXT 

module=no
eval SO_EXT=$shrext_cmds
AC_SUBST(SO_EXT)

case `uname -s` in
	Darwin)
	PRELOAD_VAR="DYLD_INSERT_LIBRARIES"
	EXTRA_ENV="DYLD_FORCE_FLAT_NAMESPACE=1; export DYLD_FORCE_FLAT_NAMESPACE"
	;;
	*)
	PRELOAD_VAR="LD_PRELOAD"
	EXTRA_ENV=""
	;;
esac

SCREW_ENV=CLOCKSCREW
AC_SUBST(SCREW_ENV)
AC_DEFINE_UNQUOTED([SCREW_ENV], ["$SCREW_ENV"], [Name of environment variable])

AC_SUBST(PRELOAD_VAR)
AC_SUBST(EXTRA_ENV)

AC_CHECK_FUNCS([gettimeofday localtime_r strtol])
AC_CHECK_HEADERS([sys/time.h])
AC_FUNC_MKTIME 

AC_OUTPUT([Makefile clockscrew])
